# ProjCripto

./: 10_voterApp.cpp  11_tallyApp.cpp  Admin.cpp  CMakeLists.txt  Counter.cpp  Election.cpp  README.md  Signer.cpp  Tally.cpp  Voter.cpp  bash.sh  commandsToRun.txt  exit.sh  hash.sh  resources.h
Admin/: 9_createWeightsMatirx.cpp  Admin.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  admin.cpp  administrator.cpp  bash.sh  cmake_install.cmake  receiveShares.cpp  sendShares.cpp
Admin/CA/: my-ca.crt  my-ca.key
Admin/Certs/: client-cert0.csr  client-cert0.key  client-cert0.p12  client-cert1.csr  client-cert1.key  client-cert1.p12
Admin/ElectionKeys/: privateKey.txt  publicKey.txt
Ballot/: 21,31,24,1.txt  vote30.txt
Counter/: CMakeLists.txt  Counter.cpp
Tally/: CMakeCache.txt  CMakeLists.txt  Makefile  Tally.cpp  cmake_install.cmake  encryptedWeight_0  encryptedWeight_1
TallyApp/: CMakeCache.txt  CMakeLists.txt  Makefile  Tally.cpp  cmake_install.cmake
TallyApp/Certs/: my-ca.crt
Trustees/trustee0/: share0.txt
Trustees/trustee1/: share1.txt
Trustees/trustee2/: share2.txt
Trustees/trustee3/: share3.txt
Trustees/trustee4/: share4.txt
Voter/: CMakeLists.txt  Voter.cpp  cmake_install.cmake
VoterApp/: CMakeCache.txt  CMakeLists.txt  Makefile  Voter.cpp
VoterApp/client0/: client-cert0.crt  clientPrivateKey0.key  clientPublicKey0.key  electionPublicKey.txt
VoterApp/client1/: client-cert1.crt  clientPrivateKey1.key  clientPublicKey1.key
